Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119501

Numbers colliding and not highlighted in Charts with Widgets Gallery example

XMLWordPrintable

    • Windows
    • 5d590a38d (dev), da28d17ea (6.7), 21f3364c0 (dev), f813496af (6.10), e0b94ca97 (6.9), 373ef23a8 (tqtc/lts-6.8)

      In the Charts with Widgets Gallery example, in the Bar Model Mapper page, two strange things occur when running in 6.7.0. The first thing is that the existing pillars are not highlighted by colors in the matrix containing pillar values. The second thing is that when you try to change a value in the matrix by double clicking it and typing, the current value will still be visible in the background while you are typing, until you confirm the value. This makes it difficult to see what you are typing.

       

      Expected behavior (done in 6.6.0):

      Changing row 4 in 2014 column from 162 to 221.

       

      Observed behavior (Done in 6.7.0):

      Changing row 4 in 2014 column from 166 to 221.

        For Gerrit Dashboard: QTBUG-119501
        # Subject Branch Project Status CR V

            wladimir.leuschner Wladimir Leuschner
            chrisrl Chris Lerner (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: